# docker_testing

./: .gitignore  README.md  tags
OME_server/: docker-compose-tailscale.yml  docker-compose.yml  run.sh
OME_server/ome_conf/: Server.id  Server.xml  VirtualHost.xml
OME_server/ome_conf/live/: Application.xml
RTMP-server/: .env.default  chat.yml  docker-compose-tailscale.yml  docker-compose.yml
reading_int/: 2_receiver  2_receiver.c  receiver  receiver.c
receiver/: .env.default  CMakeLists.txt  Dockerfile  docker-compose-tailscale.yml  docker-compose.yml  run.sh
receiver/src/: test_udp.cpp
reciever/: .env.default  CMakeLists.txt  Dockerfile  docker-compose.yml
reciever/src/: test.cpp
sender/: .env.default  .env.swp  CMakeLists.txt  Dockerfile  ca.crt  docker-compose-tailscale.yml  docker-compose.yml  tailscale.Dockerfile
sender/src/: test.cpp  test_udp.cpp
stream/: .env.default  Dockerfile  docker-compose-tailscale.yml  docker-compose.yml  run.sh
webcam/: .env.default  build.sh  docker-compose-headscale.yml  docker-compose-tailscale.yml  docker-compose.yml
